@@ -17,6 +17,7 @@ CHANGELOG Roundcube Webmail
 - Removed redundant default_folders config option (#1489737)
 - Implemented IMAP SPECIAL-USE extension support [RFC6154] (#1487830)
 - Add configurable LDAP_OPT_DEREF option (#1489864)
+- Optimize framed pages size (#1489792)
 - Fix mbox files import
 
 RELEASE 1.0.1
